--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -97,9 +97,10 @@ div#wrapper {
   background-color:#ef553a;
 }
 .label {
-  padding: 4px 6px;
-  border: none;
+  padding: 6px;
+  border-radius: 0px;
   text-shadow: none;
+  font-size: 0.9em;
 }
 
 .but_list, .tab-content{
@@ -1093,13 +1094,16 @@ i.fa.fa-twitter {
     -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
     box-shadow: 0 1px 1px rgba(0,0,0,.05);
 }
-.questions h5{
-	color: #000;
-	font-size: 1.3em;
-	line-height: 1.6em;
+.questions a:link {
+  text-decoration:none;   
 }
-.questions p{
-	font-size: 0.9em;
+.questions a h5{
+  color: #000;
+  font-size: 1.3em;
+  line-height: 1.6em;   
+}
+.questions div.question-answer{
+	font-size: 1.2em;
   	color: #999;
   	padding:1em 0;
   	line-height: 2em;
@@ -2419,3 +2423,58 @@ button i {
 .progress .circle.active .title {
   color: #0c95be;
 }
+
+/* *********  form tags input  **************************** */
+.tagsinput {
+  border: 1px solid #CCC;
+  background: #FFF;
+  padding: 6px 6px 0;
+  width: 300px;
+  overflow-y: auto; }
+
+span.tag {
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  display: block;
+  float: left;
+  padding: 5px 9px;
+  text-decoration: none;
+  background: #6FD5F7;
+  color: #F1F6F7;
+  margin-right: 5px;
+  font-weight: 500;
+  margin-bottom: 5px;
+  font-family: 'Montserrat-Regular'; }
+
+span.tag a {
+  color: #F1F6F7 !important; }
+
+.tagsinput span.tag a {
+  font-weight: bold;
+  color: #82ad2b;
+  text-decoration: none;
+  font-size: 11px; }
+
+.tagsinput input {
+  width: 80px;
+  margin: 0px;
+  font-family: 'Montserrat-Regular';
+  font-size: 13px;
+  border: 1px solid transparent;
+  padding: 3px;
+  background: transparent;
+  color: #000;
+  outline: 0px; }
+
+.tagsinput div {
+  display: block;
+  float: left; }
+
+.tags_clear {
+  clear: both;
+  width: 100%;
+  height: 0px; }
+
+.not_valid {
+  background: #FBD8DB !important;
+  color: #90111A !important; }
