front ajustes, perfil, calificacion, autenticacion

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1222,6 +1222,7 @@ i.fa.fa-twitter {
 .btn {
     border-radius: 0px;
     outline: none;
+    padding: 10px 12px;
 }
 .btn-default:active, .btn-default:focus, .btn-default:hover {
     outline: none !important;
@@ -2478,3 +2479,19 @@ span.tag a {
 .not_valid {
   background: #FBD8DB !important;
   color: #90111A !important; }
+
+div.aling-center-button {
+  padding: 0 15px 0 15px;
+}
+
+.clear {
+  clear: both;
+}
+
+.margin-bottom-10 {
+  margin-bottom: 10px;
+}
+
+.btn-inherit {
+  float: inherit;
+}
