menu ocultar y mostrar

--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -20,7 +20,7 @@
         z-index: 1;
         position: absolute;
         width: 250px;
-        
+        display: block; 
     }
 
     .navbar-top-links .dropdown-messages,
