--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -570,6 +570,9 @@ i.fa.fa-globe {
   -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
   box-shadow: 0 1px 1px rgba(0,0,0,.05);
 }
+.content-wizard {
+  padding: 0em;
+}
 .content-top-1 {
     background-color: #fff;
    	padding: 1.8em;
@@ -1993,7 +1996,8 @@ tr.table-row:hover{
 	background:#FAFAFA;
 }
 .tab-content {
-    padding-left: 0px;
+    padding: 10px;
+    margin: 0px;
 }
 tr.table-row {
     border-top: 1px solid #F3F3F4;
@@ -2547,3 +2551,187 @@ div.aling-center-button {
   margin-bottom: 10px;
   color: #009fe3;
 }
+
+/* wizard */
+
+.wizard {
+    /*margin: 20px auto;*/
+    background: #fff;
+}
+
+    .wizard .nav-tabs {
+        position: relative;
+        /*margin: 40px auto;*/
+        margin-bottom: 15px;
+        border-bottom-color: #e0e0e0;
+    }
+
+    .wizard > div.wizard-inner {
+        position: relative;
+    }
+
+.connecting-line {
+    height: 2px;
+    background: #e0e0e0;
+    position: absolute;
+    width: 80%;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    top: 50%;
+    z-index: 1;
+}
+
+.wizard .nav-tabs > li.active > a, .wizard .nav-tabs > li.active > a:hover, .wizard .nav-tabs > li.active > a:focus {
+    color: #555555;
+    cursor: default;
+    border: 0;
+    border-color: transparent;
+}
+
+span.round-tab {
+    width: 50px;
+    height: 50px;
+    line-height: 60px;
+    display: inline-block;
+    border-radius: 100px;
+    background: #fff;
+    border: 2px solid #e0e0e0;
+    z-index: 2;
+    position: absolute;
+    left: 0;
+    text-align: center;
+    font-size: 20px;
+}
+span.round-tab i{
+    color:#555555;
+}
+.wizard li.active span.round-tab {
+    background: #fff;
+    border: 2px solid #5bc0de;
+    
+}
+.wizard li.active span.round-tab i{
+    color: #5bc0de;
+}
+
+span.round-tab:hover {
+    color: #333;
+    border: 2px solid #333;
+}
+
+.wizard .nav-tabs > li {
+    width: 25%;
+}
+
+.wizard li:after {
+    content: " ";
+    position: absolute;
+    left: 40%;
+    opacity: 0;
+    margin: 0 auto;
+    bottom: 0px;
+    border: 5px solid transparent;
+    border-bottom-color: #5bc0de;
+    transition: 0.1s ease-in-out;
+}
+
+.wizard li.active:after {
+    content: " ";
+    position: absolute;
+    left: 40%;
+    opacity: 1;
+    margin: 0 auto;
+    bottom: 0px;
+    border: 10px solid transparent;
+    border-bottom-color: #5bc0de;
+}
+
+.wizard .nav-tabs > li a {
+    width: 70px;
+    height: 70px;
+    margin: 5px auto;
+    border-radius: 100%;
+    padding: 0;
+    border-color: transparent;
+}
+
+    .wizard .nav-tabs > li a:hover {
+        background: transparent;
+    }
+
+.wizard .tab-pane {
+    position: relative;
+    /*padding-top: 50px;*/
+}
+
+.wizard-inner .nav > li > a i {
+    margin-right: 0px;
+}
+.wizard h3 {
+    margin-top: 0;
+}
+
+@media( max-width : 585px ) {
+
+    .wizard {
+        height: auto !important;
+    }
+
+    span.round-tab {
+        font-size: 16px;
+        width: 50px;
+        height: 50px;
+        line-height: 50px;
+    }
+
+    .wizard .nav-tabs > li a {
+        width: 55px;
+        height: 55px;
+        line-height: 55px;
+    }
+
+    .wizard li.active:after {
+        content: " ";
+        position: absolute;
+        /*left: 35%;*/
+    }
+}
+
+.border-top {
+    border-top: 3px solid #e0e0e0;
+    width: 100%;
+    padding-top: 5px;
+    text-align: right;
+}
+
+.form-control.has-feedback-left {
+  padding-left: 35px; }
+
+.form-control-feedback {
+  margin-top: 5px;
+    height: 30px;
+    color: #12A1DF;
+    line-height: 24px;
+    font-size: 18px; }
+
+.form-control-feedback.left {
+  border-right: 1px solid #12A1DF;
+  left: 20px; }
+
+.input_delivery_address .form-control-feedback.left {
+  border-right: 1px solid #12A1DF;
+  left: 5px; }
+
+.form-control-feedback.right {
+  border-left: 1px solid #12A1DF;
+  right: 13px; }
+
+.form-control.has-feedback-left {
+  padding-left: 50px; }
+
+.form-control.has-feedback-right {
+  padding-right: 45px; }
+
+.form-group {
+  margin-bottom: 10px; }
