--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2735,3 +2735,37 @@ span.round-tab:hover {
 
 .form-group {
   margin-bottom: 10px; }
+
+.package-description {
+  display: inline-block;
+}
+
+.package-description img {
+    width: 40px;
+    height: 40px;
+    border-radius: 100px;
+}
+
+.package-description strong {
+  text-align: center;
+  padding: 0px 30px 0 30px;
+}
+
+input.input-number {
+    width: 50px;
+    text-align: center;
+}
+
+.padding-10 {
+  padding: 10px;
+}
+
+.list_prices span.prices-pack {
+  font-size: 0.85em;
+  color: #999;
+  font-weight: bold;
+}
+
+.margin-left-5 {
+  margin-left: 5px;
+}
